--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^7.0.3",
     "@react-navigation/native-stack": "^7.1.0",
     "expo": "~52.0.7",
+    "expo-image": "~2.0.1",
     "expo-image-picker": "~16.0.2",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
