--- a/app.json
+++ b/app.json
@@ -19,7 +19,9 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.yours.photojournal",
+      "versionCode": 1
     },
     "web": {
       "favicon": "./assets/favicon.png"
